# catenary-ml-test

./: .gitignore  Cargo.toml  LICENSE
raw_static_data_mapper/: Cargo.toml
raw_static_data_mapper/src/: main.rs
src/: external.rs  main.rs
training/: eleven_hour_data.csv:Zone.Identifier  main.py  testing.csv  training.csv  training2.csv  training3.csv
training/modelling/: debug.py  main.py  reading_data.py  train_algos.py
