[package]
name = "catenary-ml-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.189"
gtfs-rt = "0.4.0"
prost = { version = "0.11", features = [] }
csv = { version = "1.3.0", features = [] }
chrono = "0.4.31"
serde_json = "1.0.107"
redis = "0.23.3"
polars = { version = "0.33.2", features = ["csv", "lazy"] }
qstring = "0.7.2"
